# miniboosts

./: .gitignore  CHECKLIST.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
boosters/adaboost/: Cargo.toml
boosters/adaboost/src/: algorithm.rs  lib.rs
boosters/adaboost/tests/: adaboost.rs
boosters/adaboostv/: Cargo.toml
boosters/adaboostv/src/: algorithm.rs  lib.rs
boosters/adaboostv/tests/: adaboostv.rs
boosters/corrective-erlpboost/: Cargo.toml
boosters/corrective-erlpboost/src/: algorithm.rs  lib.rs
boosters/corrective-erlpboost/tests/: corrective-erlpboost.rs
boosters/erlpboost/: Cargo.toml
boosters/erlpboost/src/: algorithm.rs  lib.rs
boosters/erlpboost/tests/: erlpboost.rs
boosters/erlpboost/tests/dataset/: german.csv
boosters/gradient-boosting-machine/: Cargo.toml
boosters/gradient-boosting-machine/src/: algorithm.rs
boosters/graph-separation-boosting/: Cargo.toml
boosters/graph-separation-boosting/src/: algorithm.rs  lib.rs
boosters/lpboost/: Cargo.toml
boosters/lpboost/src/: algorithm.rs  lib.rs
boosters/lpboost/tests/: lpboost.rs
boosters/madaboost/: Cargo.toml
boosters/madaboost/src/: algorithm.rs  lib.rs
boosters/madaboost/tests/: madaboost.rs
boosters/mlpboost/: Cargo.toml
boosters/mlpboost/src/: algorithm.rs  lib.rs
boosters/mlpboost/tests/: mlpboost.rs
boosters/smoothboost/: Cargo.toml
boosters/smoothboost/src/: algorithm.rs  lib.rs
boosters/smoothboost/tests/: smoothboost.rs
boosters/softboost/: Cargo.toml  test.csv
boosters/softboost/src/: algorithm.rs  lib.rs  solver.rs
boosters/softboost/tests/: softboost.rs
boosters/totalboost/: Cargo.toml
boosters/totalboost/src/: algorithm.rs  lib.rs
hypotheses/: Cargo.toml
hypotheses/src/: lib.rs  naive_aggregation.rs  weighted_majority.rs
img/: DepictExample.ipynb  Figure.key
img/example/: Cargo.toml
img/example/src/: main.rs
logging/: Cargo.toml
logging/src/: builder.rs  lib.rs  logger.rs  objective.rs
miniboosts-core/: Cargo.toml
miniboosts-core/src/: booster.rs  constants.rs  hypothesis.rs  lib.rs  sample.rs  tools.rs  weak_learner.rs
miniboosts-core/src/sample/: feature.rs  reader.rs  sample_struct.rs
miniboosts-core/src/tools/: binning.rs  checkers.rs  helpers.rs  tree.rs
optimization/: Cargo.toml
optimization/src/: deformed_frank_wolfe.rs  edge_minimization.rs  frank_wolfe.rs  lib.rs  objective_function.rs  soft_margin_optimization.rs
optimization/src/bak/: frank_wolfe.rs
src/: base_learner.rs  booster.rs  classifier.rs  common.rs  data_reader.rs  data_type.rs  hypothesis.rs  lib.rs  main.rs  prelude.rs  regressor.rs  research.rs  sample.rs  weak_learner.rs
src/base_learner/: core.rs  decision_stump.rs  decision_tree.rs  dstump.rs  dtree.rs  ltf.rs  mod.rs
src/base_learner/decision_stump/: dstump.rs  dstump_classifier.rs
src/base_learner/decision_tree/: criterion.rs  dtree.rs  dtree_classifier.rs  inner_predictor.rs  measure.rs  node.rs  split_rule.rs  temp.rs  train_node.rs
src/base_learner/naive_bayes/: model.rs  nbayes.rs  nbayes_classifier.rs
src/base_learner/regression_tree/: loss.rs  node.rs  reg_tree.rs  rtree_regressor.rs
src/booster/: README.md  adaboost.rs  adaboostv.rs  anyboost.rs  booster_trait.rs  brownboost.rs  cerlpboost.rs  core.rs  erlpboost.rs  gradboost.rs  gradient_boost.rs  graph_separation_boosting.rs  leveragings.rs  logitboost.rs  lpboost.rs  madaboost.rs  mlpboost.rs  mod.rs  qpboost.rs  smoothboost.rs  softboost.rs  sparsiboost.rs  tadaboost.rs  totalboost.rs  xgboost.rs
src/booster/adaboost/: adaboost.rs  adaboost_algorithm.rs
src/booster/adaboostv/: adaboostv.rs  adaboostv_algorithm.rs
src/booster/cerlpboost/: cerlpboost.rs  cerlpboost_algorithm.rs
src/booster/erlpboost/: erlpb.rs  erlpboost.rs  erlpboost_algorithm.rs  gurobi_qp_model.rs  qp_model.rs
src/booster/gradient_boost/: gbm.rs
src/booster/graph_separation_boosting/: graph_separation_algorithm.rs
src/booster/leveragings/: exp_lev.rs  square_lev_r.rs
src/booster/lpboost/: lp_model.rs  lpb.rs  lpboost.rs  lpboost_algorithm.rs
src/booster/madaboost/: madaboost_algorithm.rs
src/booster/mlpboost/: dist.rs  gurobi_lp_model.rs  lp_model.rs  mlpb.rs  mlpboost.rs  mlpboost_algorithm.rs  (+3 more)
src/common/: checker.rs  frank_wolfe.rs  loss_functions.rs  objective_functions.rs  task.rs  utils.rs
src/hypothesis/: hypothesis_traits.rs  naive_aggregation.rs  weighted_majority.rs
src/research/: .logger.rs.swp  README.md  boost_logger.rs  cross_validation.rs  logger.rs  logger_builder.rs  loss_functions.rs  objective_functions.rs
src/sample/: feature.rs  feature_struct.rs  sample.rs  sample_reader.rs  sample_struct.rs
src/tests/: adaboost_test.rs
src/weak_learner/: README.md  bad_learner.rs  common.rs  core.rs  decision_tree.rs  naive_bayes.rs  neural_network.rs  regression_tree.rs  union.rs
tests/: adaboost.rs  adaboost_test.rs  adaboostv.rs  boosting.rs  boosting_test.rs  cerlpboost.rs  data_type.rs  data_type_test.rs  dstump.rs  dstump_test.rs  dtree.rs  erlpboost.rs  gbm.rs  graphsepboost.rs  lpboost.rs  madaboost.rs  mlpboost.rs  nbayes.rs  neuralnet.rs  small_toy_example.csv  small_toy_example.txt  small_toy_example_libsvm.txt  small_toy_example_separable.csv  small_toy_example_separable.txt  smoothboost.rs  softboost.rs  toy_example.csv  toy_example.txt  toy_example_2d.csv  toy_example_2d.txt  toy_example_separable.csv  toy_example_separable.txt  tree.rs
weak-learners/decision-tree/: Cargo.toml
weak-learners/regression-tree/: Cargo.toml
weak-learners/regression-tree/src/: bin.rs  builder.rs  lib.rs  loss.rs  node.rs  regressor.rs  rtree.rs
(+49 files in other folders)
