[package]
name = "miniboosts"
version = "0.3.3"
authors = ["rmitsuboshi <rmitsuboshi.github@gmail.com>"]
edition = "2021"

description = "MiniBoosts: A collection of boosting algorithms written in Rust 🦀"
repository  = "https://github.com/rmitsuboshi/miniboosts"
categories  = ["science"]
keywords    = ["boosting", "machine-learning"]

exclude = ["/tests", "/img", "TODO.txt"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true


[dependencies]
grb         = { version = "1.3.0", optional = true }
plotters    = { version = "0.3.5" }
rand        = { version = "0.8.5" }
rand_distr  = { version = "0.4.3" }
rayon       = { version = "1.8.0" }
serde       = { version = "1.0.193", features = ["rc", "derive"] }
serde_json  = { version = "1.0.108", default-features = false, features = ["alloc"] }
polars      = { version = "0.35.4" }
fixedbitset = { version = "0.4.2" }
colored     = { version = "2.0.4" }

[features]
extended = ["grb"]
