[package]
name = "miniboosts"
version = "0.3.6"
authors = ["rmitsuboshi <rmitsuboshi.github@gmail.com>"]
edition = "2021"

description = "MiniBoosts: A collection of boosting algorithms written in Rust 🦀"
repository  = "https://github.com/rmitsuboshi/miniboosts"
categories  = ["science"]
keywords    = ["boosting", "machine-learning"]

exclude = ["/tests", "/img", "TODO.txt"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true


[dependencies]
grb         = { version = "2.0.1", optional = true }
clarabel    = { version = "0.9.0" }
rand        = { version = "0.8.5" }
rand_distr  = { version = "0.4.3" }
rayon       = { version = "1.10.0" }
serde       = { version = "1.0.206", features = ["rc", "derive"] }
serde_json  = { version = "1.0.124", default-features = false, features = ["alloc"] }
polars      = { version = "0.41.3" }
fixedbitset = { version = "0.5.7" }
colored     = { version = "2.1.0" }

[features]
gurobi = ["grb"]
