[workspace]
members = [
    "miniboosts-core",
    "boosters/adaboost",
    "boosters/adaboostv",
    "boosters/corrective-erlpboost",
    "boosters/erlpboost",
#     "boosters/gradient-boosting-machine",
    "boosters/graph-separation-boosting",
    "boosters/lpboost",
    "boosters/madaboost",
    "boosters/mlpboost",
    "boosters/smoothboost",
    "boosters/softboost",
    "boosters/totalboost",
    "weak-learners/decision-tree",
#     "weak-learners/regression-tree",
    "optimization",
    "hypotheses",
    "logging",
]

[package]
name    = "miniboosts"
version = "0.1.0"
edition = "2024"

[dependencies]
miniboosts_core = { path = "./miniboosts-core" }
logging         = { path = "./logging" }
hypotheses      = { path = "./hypotheses" }
optimization    = { path = "./optimization" }

adaboost                  = { path = "./boosters/adaboost" }
adaboostv                 = { path = "./boosters/adaboostv" }
corrective_erlpboost      = { path = "./boosters/corrective-erlpboost" }
erlpboost                 = { path = "./boosters/erlpboost" }
# gradient_boosting_machine = { path = "./boosters/gradient-boosting-machine" }
graph_separation_boosting = { path = "./boosters/graph-separation-boosting" }
lpboost                   = { path = "./boosters/lpboost" }
madaboost                 = { path = "./boosters/madaboost" }
mlpboost                  = { path = "./boosters/mlpboost" }
smoothboost               = { path = "./boosters/smoothboost" }
softboost                 = { path = "./boosters/softboost" }
totalboost                = { path = "./boosters/totalboost" }

decision_tree   = { path = "./weak-learners/decision-tree" }
# regression_tree = { path = "./weak-learners/regression-tree" }

