[package]
name = "erlpboost"
version = "0.1.0"
edition = "2024"

[dependencies]
logging         = { path = "../../logging" }
miniboosts_core = { path = "../../miniboosts-core" }
hypotheses      = { path = "../../hypotheses" }
optimization    = { path = "../../optimization" }
decision_tree   = { path = "../../weak-learners/decision-tree" }

