[package]
name = "graph_separation_boosting"
version = "0.1.0"
edition = "2024"

[dependencies]
logging         = { path = "../../logging" }
miniboosts_core = { path = "../../miniboosts-core" }
hypotheses      = { path = "../../hypotheses" }
decision_tree   = { path = "../../weak-learners/decision-tree" }

