[package]
name = "regression_tree"
version = "0.1.0"
edition = "2024"

[dependencies]
serde           = { version = "1.0.206", features = ["alloc", "derive"] }
rayon           = { version = "1.10.0" }
miniboosts_core = { path = "../../miniboosts-core" }
decision_tree   = { path = "../decision-tree" }

